# tiago_moveit_py

./: README.md
moveit_custom_adapters/: CMakeLists.txt  custom_request_adapters_plugin_description.xml  package.xml
moveit_custom_adapters/src/: fix_start_state_bounds.cpp
tiago_dual_moveit_config/: CHANGELOG.rst  CMakeLists.txt  package.xml
tiago_dual_moveit_config/config/: joint_limits.yaml  ompl_planning.yaml
tiago_dual_moveit_config/config/controllers/: controllers_pal-gripper_pal-gripper.yaml
tiago_dual_moveit_config/config/rviz/: moveit.rviz
tiago_dual_moveit_config/config/srdf/: tiago_dual.srdf.xacro
tiago_dual_moveit_config/config/srdf/disable_collisions/: left_custom_schunk-ft.srdf.xacro  left_no-ee_schunk-ft.srdf.xacro  left_pal-gripper.srdf.xacro  left_pal-gripper_schunk-ft.srdf.xacro  left_pal-hey5.srdf.xacro  left_pal-hey5_schunk-ft.srdf.xacro  left_robotiq-2f-140.srdf.xacro  left_robotiq-2f-140_schunk-ft.srdf.xacro  left_robotiq-2f-85.srdf.xacro  left_robotiq-2f-85_schunk-ft.srdf.xacro  right_custom_schunk-ft.srdf.xacro  right_no-ee_schunk-ft.srdf.xacro  right_pal-gripper.srdf.xacro  right_pal-gripper_schunk-ft.srdf.xacro  right_pal-hey5.srdf.xacro  right_pal-hey5_schunk-ft.srdf.xacro  right_robotiq-2f-140.srdf.xacro  right_robotiq-2f-140_schunk-ft.srdf.xacro  right_robotiq-2f-85.srdf.xacro  right_robotiq-2f-85_schunk-ft.srdf.xacro  tiago_dual_custom_custom.srdf.xacro  tiago_dual_custom_custom_schunk-ft.srdf.xacro  tiago_dual_custom_no-arm-right.srdf.xacro  tiago_dual_custom_no-ee.srdf.xacro  tiago_dual_custom_no-ee_schunk-ft.srdf.xacro  tiago_dual_custom_pal-gripper.srdf.xacro  tiago_dual_custom_pal-gripper_schunk-ft.srdf.xacro  tiago_dual_custom_pal-hey5.srdf.xacro  tiago_dual_custom_pal-hey5_schunk-ft.srdf.xacro  tiago_dual_custom_robotiq-2f-140.srdf.xacro  tiago_dual_custom_robotiq-2f-140_schunk-ft.srdf.xacro  tiago_dual_custom_robotiq-2f-85.srdf.xacro  tiago_dual_custom_robotiq-2f-85_schunk-ft.srdf.xacro  tiago_dual_custom_schunk-ft_custom.srdf.xacro  tiago_dual_custom_schunk-ft_custom_schunk-ft.srdf.xacro  tiago_dual_custom_schunk-ft_no-arm-right.srdf.xacro  tiago_dual_custom_schunk-ft_no-ee.srdf.xacro  tiago_dual_custom_schunk-ft_no-ee_schunk-ft.srdf.xacro  tiago_dual_custom_schunk-ft_pal-gripper.srdf.xacro  tiago_dual_custom_schunk-ft_pal-gripper_schunk-ft.srdf.xacro  (+322 more)
tiago_dual_moveit_config/config/srdf/end_effectors/: robotiq-2f-140.srdf.xacro
tiago_dual_moveit_config/config/srdf/scripts/: update.sh
tiago_dual_moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py
tiago_dual_moveit_py/: package.xml  setup.cfg  setup.py
tiago_dual_moveit_py/config/: motion_planning.yaml
tiago_dual_moveit_py/launch/: prueba.launch.py  tiago_dual_command.launch.py  tiago_dual_moveit_py.launch.py
tiago_dual_moveit_py/tiago_dual_moveit_py/: prueba.py  service_client.py  tiago_dual_actions.py  tiago_dual_command_services.py  tiago_dual_controller_monitor.py  tiago_dual_moveit_py.py  workspace_test.py
tiago_moveit_config/config/: joint_limits.yaml  ompl_planning.yaml
tiago_moveit_config/launch/: moveit_rviz.launch.py
tiago_moveit_py/: package.xml  setup.cfg  setup.py
tiago_moveit_py/config/: motion_planning.yaml
tiago_moveit_py/launch/: tiago_command.launch.py  tiago_moveit_py.launch.py
tiago_moveit_py/tiago_moveit_py/: tiago_command_services.py  tiago_moveit_py.py
tiago_moveit_py_interfaces/: CMakeLists.txt  package.xml
tiago_moveit_py_interfaces/msg/: Gripper.msg  GripperState.msg
tiago_moveit_py_interfaces/srv/: ArmControl.srv  GetActuator.srv  GripperControl.srv  Perception.srv  PickPlaceAction.srv  TorsoControl.srv  Trigger.srv
