<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit_custom_adapters</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="efallashdez@gmail.com">efallash</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>

  <depend>angles</depend>
  <depend>assimp</depend>
  <depend>boost</depend>
  <depend>bullet</depend>
  <depend>common_interfaces</depend>
  <depend>eigen</depend>
  <depend>eigen_stl_containers</depend>
  <depend>generate_parameter_library</depend>
  <depend>geometric_shapes</depend>
  <depend>geometry_msgs</depend>
  <depend>google_benchmark_vendor</depend>
  <depend>kdl_parser</depend>
  <depend>libfcl-dev</depend>
  <depend>moveit_common</depend>
  <depend>moveit_msgs</depend>
  <depend>liboctomap-dev</depend>
  <depend>octomap_msgs</depend>
  <depend>osqp_vendor</depend>
  <depend>pluginlib</depend>
  <depend>random_numbers</depend>
  <depend>rclcpp</depend>
  <depend>rsl</depend>
  <depend>ruckig</depend>
  <depend>sensor_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>srdfdom</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_kdl</depend>
  <depend>trajectory_msgs</depend>
  <depend>urdf</depend>
  <depend>urdfdom</depend>
  <depend>urdfdom_headers</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
